chapter 7: update frequency

--- a/7 Multicast and realtime service/Multicast and realtime service.tex
+++ b/7 Multicast and realtime service/Multicast and realtime service.tex
@@ -278,7 +278,7 @@ echo "net.ipv4.icmp_echo_ignore_broadcasts = 0" >> /etc/sysctl.conf  # set in bo
         \item What is the value of the Time-to-Live (TTL) field for the IGMP messages?
             Why do we not set the TTL to a larger number?
 
-        \item What is the default frequency at which the router sends IGMP queries?
+        \item What is the default \textbf{frequency} at which the router sends IGMP queries?
     \end{report}
 
 \section{Router Join to Multicast-Group}
