add fig:4.11 for icmp redirect

--- a/4 Static and dynamic routing/Static and Dynamic routing.tex
+++ b/4 Static and dynamic routing/Static and Dynamic routing.tex
@@ -251,6 +251,8 @@ tcpdump -x -s 100 -c 4 udp port 520
 
 
 \part{Routing Experiments with ICMP}
+    This exercise can run on \hyperref[fig:4.11]{Figure~4.11}.
+
 \section{ICMP redirect}
     ICMP redirect is disabled by default in linux system for security (ICMP Redirect Attacks).
     You can enable this by this command:
